k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    app.kubernetes.io/part-of: kafka-banking
