k8s/base/kafka-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-processor
  namespace: banking
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: kafka-processor
  template:
    metadata:
      labels:
        app: kafka-processor
        app.kubernetes.io/part-of: kafka-banking
    spec:
      serviceAccountName: banking-app
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 45
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: kafka-processor
      containers:
        - name: kafka-processor
          image: ghcr.io/anchalkohli/kafka-banking-processor:main
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: banking-tls
              mountPath: /etc/banking/tls
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            periodSeconds: 20
            timeoutSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["sh","-c","sleep 10"]
      volumes:
        - name: banking-tls
          secret:
            secretName: banking-tls
            optional: true
            defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-processor
  namespace: banking
spec:
  selector:
    app: kafka-processor
  ports:
    - port: 8082
      targetPort: 8082
