k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: banking
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-banking-app-traffic
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: kafka-banking
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: kafka-banking
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: kafka-banking
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
